src/objects/CLDY_Template_Product_Category__c.object
<CustomObject>
    <description>This object stores the product category that the template should be displayed in.</description>
    <fields>
        <fullName>CLDY_Template_DisplayOrder__c</fullName>
        <description>This field is used to control the order in which a product category will display in the template.</description>
        <inlineHelpText>This field is used to control the order in which a product category will display in the template. The lowest the number appear first in the template. The highest number appears last in the template.</inlineHelpText>
        <label>Template DisplayOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLDY_Template_Section__c</fullName>
        <description>This field is used to store the section in the template that the product will display in.</description>
        <inlineHelpText>This field is used to store the section in the template that the product will display in.</inlineHelpText>
        <label>Template Section</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLDY_Template_Sort_Order__c</fullName>
        <label>Template Sort Order</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLDY_Template_Subsection__c</fullName>
        <description>This field determines which sub-section the product will display in the template.</description>
        <inlineHelpText>This field determines which sub-section the product will display in the template.</inlineHelpText>
        <label>Template Subsection</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Template Product Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CLDY_Template_Section__c</columns>
        <columns>CLDY_Template_Subsection__c</columns>
        <columns>CLDY_Template_Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Inform_Template_Product_Categories</fullName>
        <columns>NAME</columns>
        <columns>CLDY_Template_Section__c</columns>
        <columns>CLDY_Template_Subsection__c</columns>
        <columns>CLDY_Template_Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Perform,Respond</value>
        </filters>
        <filters>
            <field>CLDY_Template_Section__c</field>
            <operation>notContain</operation>
            <value>TriTech.com</value>
        </filters>
        <label>Inform Template Product Categories</label>
    </listViews>
    <listViews>
        <fullName>Perform_Template_Product_Categories</fullName>
        <columns>NAME</columns>
        <columns>CLDY_Template_Section__c</columns>
        <columns>CLDY_Template_Subsection__c</columns>
        <columns>CLDY_Template_Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Perform</value>
        </filters>
        <label>Perform Template Product Categories</label>
    </listViews>
    <listViews>
        <fullName>Respond_Template_Product_Categories</fullName>
        <columns>NAME</columns>
        <columns>CLDY_Template_Section__c</columns>
        <columns>CLDY_Template_Subsection__c</columns>
        <columns>CLDY_Template_Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Respond,TriTech.com</value>
        </filters>
        <label>Respond Template Product Categories</label>
    </listViews>
    <nameField>
        <label>Template Product Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Product Categorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>